--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
       .otp-wrap {
         position: relative;
         display: flex;
+        flex-wrap: nowrap;
         justify-content: center;
-        gap: clamp(0.18rem, 1vw, 0.58rem);
+        gap: clamp(0.1rem, 0.8vw, 0.5rem);
         margin: 0 auto;
         padding: 0.35rem;
         width: 100%;
@@ -61,13 +62,15 @@
       }
 
       .group-gap {
-        margin-right: clamp(0.25rem, 1.5vw, 0.65rem);
+        margin-right: clamp(0.18rem, 1.15vw, 0.6rem);
       }
 
       .box {
-        width: clamp(18px, 5.6vw, 48px);
-        aspect-ratio: 1;
-        border-radius: 10px;
+        --box-size: clamp(16px, 5.1vw, 48px);
+        flex: 0 0 var(--box-size);
+        width: var(--box-size);
+        height: var(--box-size);
+        border-radius: clamp(4px, 0.7vw, 10px);
         border: 1.5px solid rgba(255, 255, 255, 0.42);
         display: grid;
         place-items: center;
@@ -324,6 +327,15 @@
         hiddenInput.setSelectionRange(hiddenInput.value.length, hiddenInput.value.length);
       }
 
+      function applyFromRawInput(rawValue) {
+        if (isVerifying) return;
+        const sanitized = (rawValue || '').replace(/[^a-zA-Z0-9]/g, '').toUpperCase().slice(0, MAX_DIGITS);
+        code = Array.from({ length: MAX_DIGITS }, (_, index) => sanitized[index] || '');
+        caretIndex = Math.min(sanitized.length, MAX_DIGITS);
+        syncHiddenInput();
+        render();
+      }
+
       function nextEmptyIndex() {
         const empty = code.findIndex((char) => char === '');
         return empty === -1 ? MAX_DIGITS : empty;
@@ -437,6 +449,13 @@
           syncHiddenInput();
           render();
         }
+      });
+
+      // Mobile fallback: some virtual keyboards bypass keydown/beforeinput consistency.
+      hiddenInput.addEventListener('input', (event) => {
+        if (!event.isTrusted || isVerifying) return;
+        hasUserInteracted = true;
+        applyFromRawInput(hiddenInput.value);
       });
 
       // ---------- paste sanitization ----------
