--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enter Code</title>
+    <title>ID Tag</title>
     <style>
       :root {
         --bg: #121212;
@@ -236,8 +236,8 @@
   </head>
   <body>
     <section class="panel">
-      <h1>Enter Code</h1>
-      <p class="subtitle">12-character code (format ABCD-EFGH-IJKL)</p>
+      <h1>Temukan Pemilik</h1>
+      <p class="subtitle">Masukkan kode unik 12 karakter yang terukir pada bandul untuk melihat profil pemilik terdaftar.</p>
 
       <label for="otp-input" class="sr-only">12-character code input</label>
       <div id="otpWrap" class="otp-wrap" aria-label="12 character code visual entry"></div>
