--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,9 @@
 
       function clearCaptureInput() {
         hiddenInput.value = '';
+        if (typeof hiddenInput.setSelectionRange === 'function') {
+          hiddenInput.setSelectionRange(0, 0);
+        }
       }
 
       function isPrintableChar(char) {
@@ -134,23 +137,19 @@
         return Math.max(0, Math.min(index, MAX_DIGITS - 1));
       }
 
-      function sanitizeCodeInput(text) {
-        return filterPrintable(text).toUpperCase().replace(/[^A-Z0-9]/g, '');
-      }
-
       function writeTextAtCaret(text) {
-        const printable = sanitizeCodeInput(text);
+        const printable = filterPrintable(text);
         if (!printable) return;
 
-        for (const ch of printable) {
-          code[caretIndex] = ch;
-          if (caretIndex < MAX_DIGITS - 1) {
-            caretIndex += 1;
-          }
+        code[caretIndex] = printable.slice(-1);
+        if (caretIndex < MAX_DIGITS - 1) {
+          caretIndex += 1;
         }
       }
 
       function clearAtBackspace() {
+        caretIndex = clampCaret(caretIndex);
+
         // If current slot has content, clear it first.
         if (code[caretIndex]) {
           code[caretIndex] = '';
@@ -277,17 +276,10 @@
         handledByBeforeInput = false;
 
         if (isComposing) {
-          if (event.inputType.startsWith('insert')) {
-            event.preventDefault();
-          }
           return;
         }
 
         if (event.inputType === 'insertText') {
-          event.preventDefault();
-          handledByBeforeInput = true;
-          writeTextAtCaret(event.data || '');
-          commitSlotState();
           return;
         }
 
